# bobi_fishbot_v4_interface

./: CMakeLists.txt  package.xml
aesl/: FishbotV4_fw.aesl
cmake/modules/: FindAseba.cmake
config/: fishbotV4_1.yaml  fishbot_1.yaml
include/bobi_fishbot_v4_interface/: dbus_interface.h
launch/: fishbotV4_1.launch  fishbot_1.launch
scripts/: connect_fisbot_1.sh
src/: dbus_interface.cpp  fishbot_v4_interface_node.cpp
